# fero-ecommerce

./: .gitignore  README.md  pyproject.toml
drfapi/: filters.py  models.py  serializers.py  urls.py  views.py
drfapi/migrations/: 0001_initial.py
ecommerce/: settings.py  urls.py
